@@ -293,25 +293,6 @@ namespace utility
 	
 }
 
-namespace Gst
-{
-	/*
-	 *	retourne le temps en string par rapport au temps nsecs (gstreamer)
-	 */
-	Glib::ustring time_to_string (gint64 time);
-
-	/*
-	 * Display a message for missing plugins.
-	 */
-	void dialog_missing_plugins(const std::list<Glib::ustring> &missings);
-
-	/*
-	 * Checks if the element exists and whether its version is at least the version required.
-	 * Display a dialog error if failed.
-	 */
-	bool check_registry(const Glib::ustring &name, int min_major, int min_minor, int min_micro);
-}
-
 /*
  *
  */
